# ConwaysGOLcpp

./: .gitignore  CMakeLists.txt  README.md
src/: game_app.cpp  game_app.h  game_of_life.cpp  game_of_life.h  main.cpp
